@@ -13,3 +13,4 @@ Changes:
 9. Update getInput method form Router class (Add missing argument)
 10. Update userInfo class fix issue in firefox browser return null in browserName and version
 11- Update UserInfo Class
+12. Added Formats class (for converting time and data unit in houam readable form)
